fix grid problem on mobile devices

--- a/src/components/card/usecaseCard/index.module.sass
+++ b/src/components/card/usecaseCard/index.module.sass
@@ -3,7 +3,8 @@
     background-repeat: no-repeat
     background-position: right bottom
     width: 100%
-    height: 100%
+    height: 250px
+    max-height: 100%
     position: relative
     text-align: center
     padding: 5rem
