--- a/src/pages/Home/index.module.sass
+++ b/src/pages/Home/index.module.sass
@@ -49,11 +49,11 @@
     padding: 1rem
     display: grid
     gap: 20px
+    overflow-y: scroll
     grid-template-columns: repeat(auto-fit, 100%)
-    height: 250px
+    grid-auto-rows: max-content
     @include mixins.device-style($device: 'sm')
         grid-template-columns: repeat(auto-fit, 48%)
-
     @include mixins.device-style($device: 'lg')
         grid-template-columns: repeat(auto-fit, 30%)
 
